# kubie

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  release.yml  test.yml
ci/: before-deploy.bash
completion/: kubie.bash  kubie.fish  kubie.zsh
releases/amd64/v0.1.0/: kubie
releases/linux/amd64/v0.2.0/: kubie
releases/linux/amd64/v0.3.0/: kubie
releases/linux/amd64/v0.4.0/: kubie
releases/linux/amd64/v0.5.0/: kubie
releases/linux/amd64/v0.6.0/: kubie
shell/completion/: kubie.bash  kubie.fish
shell/key-bindings/: kubie.zsh
src/: commands.rs  fzf.rs  ioutil.rs  kubeconfig.rs  kubectl.rs  main.rs  persist.rs  session.rs  settings.rs  shell.rs  state.rs  tempfile.rs  vars.rs
src/cmd/: context.rs  delete.rs  edit.rs  exec.rs  export.rs  get_completions.rs  info.rs  lint.rs  meta.rs  mod.rs  namespace.rs  update.rs
src/shell/: bash.rs  detect.rs  elvish.rs  fish.rs  loading.bash  loading.zsh  mod.rs  nu.rs  prompt.bash  prompt.fish  prompt.rs  prompt.zsh  xonsh.rs  zsh.rs
src/skim/: mod.rs
tools/: release.bash
