[package]
authors = ["Simon Bernier St-Pierre <git@sbstp.ca>"]
categories = ["command-line-utilities", "development-tools"]
description = "A more powerful alternative to kubectx and kubens."
documentation = "https://github.com/sbstp/kubie/blob/master/README.md"
edition = "2018"
exclude = ["releases/**/*"]
homepage = "https://github.com/sbstp/kubie"
keywords = ["kubernetes", "kubectx", "kubens"]
license = "Zlib"
name = "kubie"
readme = "README.md"
repository = "https://github.com/sbstp/kubie"
version = "0.14.0"

[dependencies]
anyhow = "1"
atty = "0.2"
cfg-if = "1"
dirs = "2"
fs2 = "0.4.3"
glob = "0.3"
lazy_static = "1"
libc = "0.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0.8"
signal-hook = "0.1"
structopt = "0.3"
tempfile = "3"
which = "3"
wildmatch = "1"

[dependencies.attohttpc]
default-features = false
features = ["compress", "json", "tls-rustls"]
version = "0.16"

[profile.release]
codegen-units = 1
lto = true
