[package]
authors = ["Simon Bernier St-Pierre <git@sbstp.ca>"]
categories = ["command-line-utilities", "development-tools"]
description = "A more powerful alternative to kubectx and kubens."
documentation = "https://github.com/sbstp/kubie/blob/master/README.md"
edition = "2018"
exclude = ["releases/**/*"]
homepage = "https://github.com/sbstp/kubie"
keywords = ["kubernetes", "kubectx", "kubens"]
license = "Zlib"
name = "kubie"
readme = "README.md"
repository = "https://github.com/sbstp/kubie"
version = "0.23.1"

[dependencies]
anyhow = "1"
clap = { version = "4.5.9", features = ["derive"] }
cfg-if = "1"
dirs = "5"
fs2 = "0.4"
glob = "0.3"
lazy_static = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
signal-hook = "0.3"
tempfile = "3"
which = "6"
wildmatch = "2"
skim = "0.10.4"

[dependencies.attohttpc]
default-features = false
features = ["compress", "json", "tls-rustls-native-roots"]
version = "0.28"
optional = true

[features]
update = ["attohttpc"]
default = ["update"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
