[package]
authors = ["Simon Bernier St-Pierre <git@sbstp.ca>"]
categories = ["command-line-utilities", "development-tools"]
description = "A more powerful alternative to kubectx and kubens."
documentation = "https://github.com/sbstp/kubie/blob/master/README.md"
edition = "2021"
exclude = ["releases/**/*"]
homepage = "https://github.com/sbstp/kubie"
keywords = ["kubernetes", "kubectx", "kubens"]
license = "Zlib"
name = "kubie"
readme = "README.md"
repository = "https://github.com/sbstp/kubie"
version = "0.26.1"

[dependencies]
anyhow = "1"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.62"
cfg-if = "1"
dirs = "6"
fs2 = "0.4"
glob = "0.3"
lazy_static = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
signal-hook = "0.3"
tempfile = "3"
which = "7"
wildmatch = "2"
skim = "0.20"
shlex = "1"

[target.arm-unknown-linux-musleabi.dependencies]
aws-lc-rs = { version = "1.15", default-features = false, features = [
    "aws-lc-sys",
    "prebuilt-nasm",
    "bindgen",
] }

[dependencies.attohttpc]
default-features = false
features = ["compress", "json", "tls-rustls-native-roots"]
version = "0.30.1"
optional = true

[features]
update = ["attohttpc"]
default = ["update"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
